--- a/src/Components/Styles/Header.css
+++ b/src/Components/Styles/Header.css
@@ -22,6 +22,11 @@ nav {
   /* border: 1px solid red; */
 }
 
+.navleft a,
+.socoalMedia a {
+  color: #fff;
+}
+
 .socoalMedia {
   display: flex;
   justify-content: flex-end;
